# imviz

./: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
examples/: demo.py
examples/demo/: demo.py
imviz/: __init__.py  autogui.py
src/: bindings.cpp  bindings_imgui.cpp  bindings_implot.cpp  file_dialog.cpp  imgui_styles.cpp  imviz.cpp  imviz.hpp
